[tool.poetry]
name = "fastapi-tutorial"
version = "0.0.1"
description = "This project follow the tutorial of fast-api. Each commit is a step of the tutorial."
authors = ["KuroiKoto <contact@kuroikoto.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
